Update text size on mobile to avoid overflow

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -70,11 +70,12 @@
     .label {
         @apply bg-neutral-brown text-primary-yellow uppercase py-[0.3rem] px-[0.6rem] font-semibold text-[0.75rem] rounded-lg;
     }
+
     .text {
         @apply flex flex-col gap-y-[1rem] lg:gap-y-[2.5rem] items-center justify-center text-center;
 
         h1 {
-            @apply h2 flex;
+            @apply text-[3rem] lg:text-[4rem];
         }
     }
     @media (max-width: 740px) {
@@ -86,14 +87,14 @@
         @apply text-[1.25rem] md:line-clamp-5;
     }
     .image {
-        @apply flex aspect-square flex-col gap-y-[1.5rem] order-last md:order-none;
+        @apply flex flex-col gap-y-[1.5rem] order-last md:order-none;
 
         .btn {
             @apply py-[0.2rem];
         }
 
         img {
-            @apply object-cover md:rounded-3xl border-y md:border-2 border-neutral-brown;
+            @apply aspect-square object-cover md:rounded-3xl border-y md:border-2 border-neutral-brown w-full;
         }
     }
     .btn-links {
